# marketing-agent

./: .env.example  .gitignore  AUTONOMOUS_CMO_ACCEPTANCE.md  AUTONOMOUS_EXECUTIVE_OS_SPECIFICATION_v1.0.md  OPERATIONAL_READINESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: autonomous-marketing.yml  daily-brief.yml
config/companies/: chatbot2u.yaml
config/funnels/: chatbot2u.yaml
config/objectives/: chatbot2u.yaml
knowledge/: ceo_constitution.md  chatbot2u.md  hebrew_style_guide.md
src/: config.py  logging_config.py  main.py  scheduler.py
src/agents/: design_system.py
src/briefs/: generator.py
src/channels/: base.py  email_gmail.py  email_resend.py  file_output.py
src/decisions/: engine.py
src/execution/: action_log.py  asset_upload.py  chief_of_staff.py  evidence.py  marketing_department.py
src/memory/: journal.py  store.py
src/providers/: base.py  brand.py  marketing_platform.py  meta_graph.py  meta_mcp.py  mock.py  website_repo.py  whatsapp_bot.py
src/reports/: daily.py
src/workforce/: queue.py  (+5 more)
tests/: test_autonomous_operating_principle.py  test_brand_brain.py  test_buffer_executor.py  test_ceo_constitution.py  test_email_payload.py  test_executive_journal.py  test_hebrew_style.py  test_image_executor.py  test_judgment_governance.py  test_marketing_acceptance.py  test_marketing_department.py  test_marketing_platform_provider.py  test_meta_ads_provider.py  test_meta_mcp_brief_prompt.py  test_preflight.py  test_production_data_rules.py  test_resend_delivery.py  test_whatsapp_bot_provider.py  test_workforce_runtime.py
(+10 files in other folders)
