[project]
name = "ai-cmo"
version = "0.7.0"
description = "AI CMO operating system for ChatBot2U marketing decisions."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "uvicorn>=0.30.0",
]

[project.scripts]
ai-cmo = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
